--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
     <base-config cleartextTrafficPermitted="true" /> <!-- Permite 10.0.2.2 en emulador -->
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">dann.local</domain> <!-- Permite teléfono real -->
+        <domain includeSubdomains="true">172.16.87.178</domain> <!-- Permite teléfono real -->
     </domain-config>
 </network-security-config>
