--- a/app/src/main/res/layout/activity_nueva_receta.xml
+++ b/app/src/main/res/layout/activity_nueva_receta.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mostrar"
+    android:textColor="@color/btn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NuevaReceta">
+
 
 
     <EditText
@@ -126,7 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nueva receta"
-        android:textColor="#000000"
+        android:textColor="@color/btn"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -140,7 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingredientes"
-        android:textColor="#000000"
+        android:textColor="@color/btn"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -155,7 +157,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pasos"
-        android:textColor="#000000"
+        android:textColor="@color/btn"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -280,7 +282,7 @@
         android:padding="12dp"
         android:text="Seleccionar"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="@color/btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.035"
@@ -304,7 +306,7 @@
         android:id="@+id/btnGuardarReceta"
         android:layout_width="370dp"
         android:layout_height="70dp"
-        android:backgroundTint="#0B0B0B"
+        android:backgroundTint="@color/btn"
         android:text="Guardar receta"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -313,6 +315,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.942" />
+
+    <Button
+        android:id="@+id/btnSubirImagen"
+        android:layout_width="208dp"
+        android:layout_height="56dp"
+        android:backgroundTint="@color/btn"
+        android:text="Sube tu Imagen"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.832" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
