--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <base-config cleartextTrafficPermitted="true" /> <!-- Permite 10.0.2.2 en emulador -->
+    <base-config cleartextTrafficPermitted="true" />
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">172.16.87.178</domain> <!-- Permite teléfono real -->
+        <domain includeSubdomains="true">172.16.87.178</domain>
     </domain-config>
 </network-security-config>
