--- a/app/src/main/res/layout/activity_nueva_receta.xml
+++ b/app/src/main/res/layout/activity_nueva_receta.xml
@@ -36,6 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.25">
 
+
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -270,6 +272,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.722" />
 
+
     <Button
         android:id="@+id/btnSeleccionarSabor"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
@@ -302,6 +305,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.341" />
 
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switchPublicar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Publicar en el feed"
+        android:textSize="14sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/Pasos"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
         android:id="@+id/btnGuardarReceta"
         android:layout_width="370dp"
@@ -316,6 +330,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.942" />
 
+
+
     <Button
         android:id="@+id/btnSubirImagen"
         android:layout_width="208dp"
@@ -328,6 +344,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.832" />
+
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
